<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="parse_app_id">YOUR_APPLICATION_ID</string>
    <string name="parse_client_key">YOUR_CLIENT_KEY</string>
    <string name="hello">Hello World, ParseStarterProjectActivity!</string>
    <string name="app_name">ParseStarterProject</string>
    <string name="send">Send</string>
    <string name="message_hint">Say something</string>
    <string name="profile_me">My Profile pic</string>
    <string name="profile_other">Other Profile pic</string>
    <string name="title_activity_parse">ParseActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="plus">+</string>
    <string name="name">Name</string>
    <string name="GPA">GPA: </string>
    <string name="description">Description</string>
    <string name="tick">✓</string>
    <string name="title_activity_grade_item">GradeItemActivity</string>
    <string name="assessment_name">Name of Assignment</string>
    <string name="marks">Marks Obtained</string>
    <string name="totalmarks">Total Marks</string>
    <string name="slash">/</string>
    <string name="add">Add</string>
    <string name="percentage">Percentage</string>
    <string name="subject_name">Name of Subject</string>
    <string name="subject_description">Description of Subject</string>
    <string name="ok">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="new_assignment">New Assignment</string>
    <string name="assignment">Assignment</string>
    <string name="new_subject">New Subject</string>
    <string name="subject_list">List of Subjects</string>
    <string name="subject">Subject</string>
    <string name="score">Score</string>
    <string name="gp">GP</string>
    <string name="mark">Mark</string>
    <string name="title">GPA Manager</string>
    <string name="nameofa">Assessment Name</string>
    <string name="total">Total Marks</string>
    <string name="g">GP:</string>
    <string name="percentag">Percentage:</string>
    <string name="weightage">Weightage</string>
    <string name="message_elipses">Message...</string>
    <string name="logout">Logout</string>
    <string name="login_activity_label">Sinch Messaging Tutorial</string>
    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="title_activity_list_users">ListUsersActivity</string>
    <string name="PM">Private Chat</string>
    <string name="GM">Group Chat</string>
    <string name="GPA_app">GPA calculator</string>

</resources>
